--- a/index.html
+++ b/index.html
@@ -66,38 +66,32 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
+    <img src="img/img1.jpg" style="width:100%">
+    <img src="img/img2.jpg" style="width:100%">
+    <img src="img/img3.jpg" style="width:100%">
+    <img src="img/img4.jpg" style="width:100%">
+
   </div>
   <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
+<img src="img/img8.jpg" style="width:100%">
+    <img src="img/img9.jpg" style="width:100%">
+    <img src="img/img10.jpg" style="width:100%">
+    <img src="img/img5.jpg" style="width:100%">
+    
   </div>  
   <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
+    <img src="img/img6.jpg" style="width:100%">
+    <img src="img/img7.jpg" style="width:100%">
+	<img src="img/img6.jpg" style="width:100%">
+    <img src="img/img7.jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
+          <img src="img/img1.jpg" style="width:100%">
+    <img src="img/img2.jpg" style="width:100%">
+    <img src="img/img3.jpg" style="width:100%">
+    <img src="img/img4.jpg" style="width:100%">
+    <img src="img/img5.jpg" style="width:100%">
+    
   </div>
 </div>
 
